tests/errors/unsatisfied-requirement.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint G+1 >= G+2
   ┌─ tests/errors/unsatisfied-requirement.fil:11:16
   │
11 │   m0 := M<G+1>(left, right);
   │                ^^^^ Source is available for @[G, G+1]
   │
   ┌─ ./primitives/core.fil:72:3
   │
72 │   @[G, G+1] left: 32,
   │   ------------------ Destination's requirement @[G+1, G+2]

